2006-08-21  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc
	Sync Japanese documentation to recent changes in English files.
	(rev.1.383) 15Aug2006

2006-08-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/save.c (save_variables__sub): Do not save NaN to output file,
	since it does not print correctly.

	* src/eval.c (update_gpval_variables): Make it explicit which variables
	are updated from which context.

	* src/plot.c (main) src/util.c (int_error): Call update_gpval_variables
	on program entry and on int_error.

	Bug #1540398  (last release-critical tracker item)

2006-08-19  James R. Van Zandt  <jrvz@comcast.net>

	* term/cgm.trm: update email address

2006-08-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c: One half of the definition of clip_fill was 
	inadvertently omitted from the patch of 2006-06-04. This fix allows the
	improved clipping to apply to all filled curves, whereas without it the
	new clipping code only checked for "closed" filled curves.

2006-08-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gadgets.h: Initialize default histogram title structure to use
	character units for the title offset. Fixes spurious error if the
	y axis is log scale.

2006-08-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (do_key_sample): Check for terminal support of 
	term->filled_polygon before using it to draw a key sample. Fixes
	segfault in epson driver (and probably others) if a filled area
	is assigned an RGB color.
	Bugfix.

	* src/eval.c (update_gpval_variables): Test for term==NULL, and if so
	return without doing anything. This prevents a segfault. However, why
	does the program not trigger a similar segfault elsewhere?
	Bug #1540398

2006-08-13  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Clarify the argument required by exists(), and
	provide an example of passing it a string variable containing the